--- a/geekseek-war/.settings/org.eclipse.wst.common.component
+++ b/geekseek-war/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,12 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <dependent-module archiveName="geekseek-ejb-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/geekseek-ejb/geekseek-ejb">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="geekseek-api-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/geekseek-api/geekseek-api">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="geekseek-war"/>
         <property name="java-output-path" value="/geekseek-war/target/classes"/>
     </wb-module>
